@@ -2,24 +2,21 @@ package com.example.coffeeshop.mappers;
 
 import com.example.coffeeshop.dto.user.UserDTO;
 import com.example.coffeeshop.models.User;
+import jakarta.validation.constraints.NotNull;
 import org.springframework.security.core.GrantedAuthority;
-import org.springframework.stereotype.Service;
-import java.util.function.Function;
-import java.util.stream.Collectors;
+import org.springframework.stereotype.Component;
 
-@Service
-public class UserMapper implements Function<User, UserDTO> {
+@Component
+public class UserMapper {
 
-    @Override
-    public UserDTO apply(User user) {
+    public UserDTO toUserDTO(@NotNull User user) {
         return new UserDTO(
                 user.getFirstName() + " " + user.getLastName(),
                 user.getUsername(),
                 user.getEmail(),
-                user.getAuthorities()
-                        .stream()
-                        .map(GrantedAuthority::getAuthority)
-                        .collect(Collectors.toList())
+                user.getAuthorities().stream().map(
+                        GrantedAuthority::getAuthority
+                ).toList()
         );
     }
 
